Hiding hamburg on desktop. Also fixed issue where mobile menu caused overflow on mobile devices.

--- a/assets/styles/shared.css
+++ b/assets/styles/shared.css
@@ -218,13 +218,17 @@ h1 span{
     border: 0;
 }
 
+.menuMobileBtnWrapper{
+    display: none;
+}
+
 .menuMobileWrapper{
     position: absolute;
     top: 0;
     left: 100vw;
     width: 100vw;
     height: 100vh;
-    display: flex;
+    display: none;
     justify-content: flex-end;
     z-index: 100;
     transition: 0.7s;
@@ -302,6 +306,20 @@ h1 span{
     .firstCol, .secondCol{
         width: 100%;
         text-align: center;
+    }
+}
+
+@media (max-width: 767px){
+    header{
+        overflow-x: hidden;
+    }
+
+    .menuMobileWrapper{
+        display: flex;
+    }
+
+    .menuDeskWrapper{
+        display: none;
     }
 }
 
